Fix nesting and align elements in section-1 correctly

--- a/style.css
+++ b/style.css
@@ -5,13 +5,19 @@ body {
 
 .section-1 {
     background-color: #1f2937;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 80px;
 }
 
 .header {
     display: flex;
     flex-direction: row;
-    padding-bottom: 50px;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 80px;
 }
 
 .logo {
@@ -20,7 +26,10 @@ body {
 }
 
 .content {
-    padding-bottom: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .description {
@@ -36,6 +45,9 @@ body {
 
 ul {
     list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
 }
 
 a {
@@ -47,8 +59,13 @@ a {
 button {
     background-color: #3882f6;
     color: #f9faf8;
+    margin-top: 10px;
 }
 
 img {
-    width: 300px;
+    width: 350px;
+}
+
+.text {
+    width: 350px;
 }
